---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 99.99.9999.
  Features:
    - Vertically swap all quickbars.