@@ -8,17 +8,42 @@
 local qvs = {}
 
 
+--- Retrieves list of quickbar rows on which to perform vertical swapping.
+--
+-- @param player LuaPlayer Player invoking the swapping operation.
+-- @param mode string Swap mode of operation. See setting "qvs-swap-mode" for valid values.
+--
+-- @return table List of quickbar rows that should be vertically swapped.
+--
+function qvs.get_quickbar_rows_to_swap(player, mode)
+    local rows = {}
+
+    if mode == "all" then
+        rows = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}
+    else
+        rows = {}
+        for row_index = 1, tonumber(mode:sub(-1)) do
+            table.insert(rows, player.get_active_quick_bar_page(row_index))
+        end
+    end
+
+    return rows
+end
+
+
 --- Vertically swaps quickbar slots.
 --
 -- @param player LuaPlayer Player for which to perform the swap.
 --
-function qvs.swap(player)
+function qvs.swap(player, mode)
+    local rows = qvs.get_quickbar_rows_to_swap(player, mode)
+
     local slot_a_index
     local slot_b_index
     local slot_a_filter
     local slot_b_filter
 
-    for row_index = 1, 10 do
+    for _, row_index in ipairs(rows) do
         for slot_index = 1, 5 do
             slot_a_index = (row_index - 1) * 10 + slot_index
             slot_b_index = (row_index - 1) * 10 + slot_index + 5
@@ -42,7 +67,20 @@ end
 --
 function qvs.on_qvs_swap(event)
     local player = game.players[event.player_index]
-    qvs.swap(player)
+    local mode = qvs.get_swap_mode(player)
+
+    qvs.swap(player, mode)
+end
+
+
+--- Retrieve swap mode for a given player.
+--
+-- Thing wrapper around the per-player setting.
+--
+-- @return string Swap mode. See setting "qvs-swap-mode" for valid values.
+--
+function qvs.get_swap_mode(player)
+    return player.mod_settings["qvs-swap-mode"].value
 end
 
 
@@ -50,3 +88,4 @@ end
 -- ==========================
 
 script.on_event("qvs-swap", qvs.on_qvs_swap)
+script.on_event(defines.events.on_runtime_mod_setting_changed, qvs.on_runtime_mod_setting_changed)
