@@ -6,3 +6,23 @@ quickbar-vertical-swap=Vertically swap quickbar slots.
 
 [controls]
 qvs-swap=Vertically swap quickbar slots
+
+[mod-setting-name]
+qvs-swap-mode=Mode of operation
+
+[mod-setting-description]
+qvs-swap-mode=Specify which quickbar rows should be affected by swapping. NOTE: Modding API does not provide means to determine number of active quickbars rows, therefore four different options are provided (to match the Interface/Active quickbars setting).
+
+[string-mod-setting]
+qvs-swap-mode-all=All quickbar rows
+qvs-swap-mode-top-1=Top quickbar only
+qvs-swap-mode-top-2=Top two quickbars
+qvs-swap-mode-top-3=Top three quickbars
+qvs-swap-mode-top-4=Top four quickbars
+
+[string-mod-setting-description]
+qvs-swap-mode-all=Swap all quickbar rows, both shown and hidden ones.
+qvs-swap-mode-top-1=Swap only the top visible quickbar row.
+qvs-swap-mode-top-2=Swap the top two visible quickbar rows.
+qvs-swap-mode-top-3=Swap the top two visible quickbar rows.
+qvs-swap-mode-top-4=Swap the top two visible quickbar rows.
